# PyOphidia

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  NOTICE.rst  README.rst  pyproject.toml  setup.py
PyOphidia/: __init__.py  client.py  cube.py  experiment.py  extra.py  ophsubmit.py  task.py  where_func.py  workflow.py
PyOphidia/tests/: README.md  __init__.py  readme.md  test_extra.py
PyOphidia/utils/: README.md  __init__.py  client.py  cwl2oph.py  run.py  wclient.py
PyOphidia/utils/tasks/: apply.cwl  createcontainer.cwl  delete.cwl  deletecontainer.cwl  exportnc.cwl  exportnc2.cwl  generic.cwl  importnc.cwl  importnc2.cwl  intercube.cwl  randcube.cwl  randcube2.cwl  reduce.cwl  reduce2.cwl  script.cwl  subset.cwl
conda/recipe/: meta.yaml
docs/source/: conf.py  examples.rst  index.rst  installation.rst  tutorial.rst  usage.rst
examples/: ColdSpells.ipynb  README.rst  coldspells.sh  example.ipynb
examples/utils/: example.cwl  example.ipynb  oph_wf.cwl  oph_wf_1.cwl  oph_wf_2.cwl  oph_wf_3.cwl  oph_wf_4.cwl  tasks
