[project]
name = "PyOphidia"
version = "1.10.0"
description = "Python bindings for the Ophidia Data Analytics Platform"
license = "GPL-3.0-or-later"
authors = [
    { name = Ophidia Developers", email = "ophidia-info@cmcc.it" }
]
readme = "README.rst"
homepage = "http://ophidia.cmcc.it"
packages = [
    { include = "PyOphidia" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
convert = [
    "numpy>=1.19",
    "pandas>=1.2",
    "xarray"
]
